--- a/src/app/registration/registration.html
+++ b/src/app/registration/registration.html
@@ -8,14 +8,14 @@
                 <h1>Looking to get hired?</h1>
                 <form>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
+                        <label>Email address</label>
                         <input type="email" class="form-control" placeholder="Email" ng-model="$ctrl.applicantEmail">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" placeholder="Password" ng-model="$ctrl.applicantPassword">
                     </div>
-                    <button type="submit" class="btn btn-default" ng-click="$ctrl.registerApplicant()">Create Account</button>
+                    <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.applicantEmail, $ctrl.applicantPassword, 1)">Create Account</button>
                 </form>
             </div>
 
@@ -36,7 +36,7 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" placeholder="Password" ng-model="$ctrl.businessPassword">
                     </div>
-                    <button type="submit" class="btn btn-default">Create Account</button>
+                    <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.businessEmail, $ctrl.businessPassword, 2)">Create Account</button>
                 </form>
             </div>
         </uib-tab>
