added registration and login

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -22,7 +22,7 @@
             <a href="/registration">Register</a>
           </li>
           <li>
-            <a href="/profile">Login</a>
+            <a href="/login">Login</a>
           </li>
         </ul>
       </div>
