--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -17,12 +17,17 @@
           </div>
           <button type="submit" class="btn btn-default" ui-sref="search({search: $ctrl.searchTerm})">Submit</button>
         </form>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right" ng-hide="$ctrl.isLoggedIn">
           <li>
             <a href="/registration">Register</a>
           </li>
           <li>
             <a href="/login">Login</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right" ng-show="$ctrl.isLoggedIn">
+          <li>
+            <a ng-click="$ctrl.logOut()">Log Out</a>
           </li>
         </ul>
       </div>
