--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -37,7 +37,7 @@
             <a href="/profile">Profile</a>
           </li>
           <li>
-            <a href="/match">Live Match</a>
+            <a href="/matching">Live Match</a>
           </li>
           <li>
             <a href="/search">Search</a>
