--- a/src/app/matching/matching.html
+++ b/src/app/matching/matching.html
@@ -1,23 +1,27 @@
 <div>
-    <div class="col-xs-12">
-        <div class="col-xs-12 well" ng-repeat="match in $ctrl.matches">
-            <div>
-                <h3>Your skills in </h3>
-                <p>
-                    <span ng-repeat="skill in match.matchingSkills">
-                        {{ skill.aSkill }}({{ skill.aYears }})
-                    </span>
-                </p>
-                <h3>qualify can help you apply as a/an</h3>
-                <h2>
-                    {{ match.job.job_title }}
-                </h2>
-                <h2>At</h2>
-                <h1>
-                    {{ match.business.userInfo.data.business_name }}
-                </h1>
-                <button type="button" class="btn btn-default" ng-click="$ctrl.sendMessage(match.business.userInfo.data.user_id)">Send them a message</button>
-            </div>
+  <div>
+    <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 1">
+      <h4>These businesses have jobs that you might be interested in</h4>
+      <div class="col-xs-12 well" ng-repeat="business in $ctrl.matches">
+        <div class="caption">
+          <h3>{{ business.business.data.business_name }}</h3>
         </div>
+        <ul class="list-group">
+          <li class="list-group-item col-xs-12 col-md-6" ng-repeat="job in business.jobs">
+            <p>
+              <h3>{{ job.job_title }}</h3>
+              <h4>Skills required: </h4>
+              <span ng-repeat="matching in job.matchingSkills">
+                {{ matching.jSkill }}({{ matching.jYears }})
+              </span>
+            </p>
+          </li>
+        </ul>
+        <div class="col-xs-12">
+            <button type="button" class="btn btn-default" ng-click="$ctrl.sendMessage(business.business.data.user_id)">Send them a message</button>
+        </div>
+
+      </div>
     </div>
+  </div>
 </div>
