--- a/src/app/matching/matching.html
+++ b/src/app/matching/matching.html
@@ -1,27 +1,80 @@
 <div>
-  <div>
-    <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 1">
-      <h4>These businesses have jobs that you might be interested in</h4>
-      <div class="col-xs-12 well" ng-repeat="business in $ctrl.matches">
-        <div class="caption">
-          <h3>{{ business.business.data.business_name }}</h3>
-        </div>
-        <ul class="list-group">
-          <li class="list-group-item col-xs-12 col-md-6" ng-repeat="job in business.jobs">
-            <p>
-              <h3>{{ job.job_title }}</h3>
-              <h4>Skills required: </h4>
-              <span ng-repeat="matching in job.matchingSkills">
-                {{ matching.jSkill }}({{ matching.jYears }})
-              </span>
-            </p>
-          </li>
-        </ul>
-        <div class="col-xs-12">
-            <button type="button" class="btn btn-default" ng-click="$ctrl.sendMessage(business.business.data.user_id)">Send them a message</button>
-        </div>
+  <div class="col-xs-12" ng-show="$ctrl.loadingMatches && !($ctrl.userDetails.type === 2 && $ctrl.matches.length > 0)">
+    Loading Matches...
+  </div>
+  <button class="btn btn-default" type="button" ng-hide="$ctrl.loadingMatches" ng-click="$ctrl.onStartMatching()">Start Matching</button>
+  <div class="col-xs-12 well" ng-show="$ctrl.userDetails.type === 2">
+    <span ng-show="$ctrl.matches.length < 1">
+      Click start matching to look for candidates
+    </span>
+    <span ng-show="$ctrl.matches.length > 0">
+      You may be interested in these candidates:
+      <ul class="list-group">
+        <li class="list-group-item" ng-repeat="applicant in $ctrl.matches[0]">
+          <h3>
+            {{ applicant.applicant.userInfo.data.first_name }} {{ applicant.applicant.userInfo.data.last_name }}
+          </h3>
+          <h4>Work Experience:</h4>
+          <p>
+            <span ng-repeat="experience in applicant.applicant.userInfo.requirements">
+              {{ experience.years_exp > 0 ? experience.years_exp : "Less than 1 year" }} experience in {{ experience.skill }}
+            </span>
+          </p>
+          Fits in the following jobs
+          <ul class="list-group">
+            <li class="list-group-item col-xs-12" ng-repeat="job in applicant.jobMatch">
+              <div class="col-xs-9">
+                <h4>
+                  {{ job.job_title }}
+                </h4>
+              </div>
+              <div class="col-xs-3">
 
+                <button class="btn btn-warning">View Job</button>
+              </div>
+            </li>
+          </ul>
+          <button class="btn btn-warning">View Applicant</button>
+        </li>
+      </ul>
+    </span>
+  </div>
+
+  <script type="text/ng-template" id="matchModal.html">
+    <div class="modal-header">
+      <h3 class="modal-title" id="modal-title">We found a match!</h3>
+    </div>
+    <div class="modal-body" id="modal-body">
+      <h3>{{ $ctrl.match.job.job_title }}</h3>
+      <p>
+        {{ $ctrl.match.job.description |  limitTo:200 }}{{ $ctrl.match.job.description.length > 200 ? '...' : '' }}
+      </p>
+      <div>
+        <p>You matched with this job because of you're experience in
+          <ul>
+            <li ng-repeat='skill in $ctrl.match.job.matchingSkills'>
+              {{ skill.aSkill }}({{ skill.aYears }})
+            </li>
+          </ul> 
+        </p>
       </div>
     </div>
-  </div>
+    <div class="modal-footer">
+      <button class="btn btn-warning" type="button" ng-click="$ctrl.ok('message')">Message Business</button>
+      <button class="btn btn-warning" type="button" ng-click="$ctrl.ok('next')">Next Match</button>
+      <button class="btn btn-warning" type="button" ng-click="$ctrl.ok('view')">View Job Listing</button>
+    </div>
+  </script>
+  <script type="text/ng-template" id="noMatchModal.html">
+    <div class="modal-header">
+      <h3 class="modal-title" id="modal-title">No matches found</h3>
+    </div>
+    <div class="modal-body" id="modal-body">
+      <h3>Sorry we couldn't find a match for you, try again</h3>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-warning" type="button" ng-click="$ctrl.ok()">OK</button>
+    </div>
+  </script>
+
 </div>
