--- a/src/app/profile/profile.html
+++ b/src/app/profile/profile.html
@@ -1,12 +1,9 @@
 <div class="col-xs-12 well">
     <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 1">
         <div class="btn-lg"></div>
-        <img src="http://via.placeholder.com/200x200" alt="profile picture" class="img-thumbnail img-responsive">
         <h4>General Information</h4>
         <p>Name: {{ $ctrl.userDetails.data.first_name }} {{ $ctrl.userDetails.data.last_name }}</p>
         <p>Age: {{ $ctrl.calculateAge($ctrl.userDetails.data.date_of_birth) }}</p>
-        <p>Highest Educational Attainment: (To-do [bachelor,master,phd,elem,hs], [course name] )</p>
-        <p>Employment history: todo optional</p>
         <h4>Skills and Experience</h4>
         <ul class="list-group">
             <li class="list-group-item col-xs-12" ng-repeat="skill in $ctrl.userDetails.requirements">
@@ -20,41 +17,41 @@
                 </span>
             </li>
 
+            <li class="list-group-item" ng-hide="$ctrl.userDetails.requirements.length > 1">
+                No skills listed yet. Update your profile to add skills
+            </li>
+        </ul>
+        <button class="btn btn-default" ui-sref="update">Update Profile</button>
+    </div>
+    <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 2">
+        <div class="btn-lg"></div>
+        <img src="http://via.placeholder.com/200x200" alt="profile picture" class="img-thumbnail img-responsive">
+        <h4>General Information</h4>
+        <p>Business Name: {{ $ctrl.userDetails.data.business_name }} {{ $ctrl.userDetails.data.last_name }}</p>
+        <p>Description: {{ $ctrl.userDetails.data.description }}</p>
+        <h4>Job Postings</h4>
+        <ul class="list-group">
+            <li class="list-group-item col-xs-12" ng-repeat="job in $ctrl.userDetails.requirements">
+                <h4 class="col-xs-12">
+                    {{ job.job_title }} in {{ job.state }}, {{ job.city }}
+                </h4>
+                <p class="col-xs-12">
+                    {{ job.address }}
+                </p>
+                <p class="col-xs-12">
+                    ADD FIELD OF STUDY/JOB FIELD
+                </p>
+                <span class="col-xs-12">
+                    {{ job.description | limitTo:100 }}{{ job.description.length > 50 ? '...' : '' }}
+                </span>
+                <button class="btn btn-danger">Delete Job</button>
+            </li>
+
             <li class="list-group-item" ng-show="!$ctrl.userDetails.requirements">
                 No skills listed yet. Update your profile to add skills
             </li>
         </ul>
-        <button class="btn btn-default">Update Profile</button>
+        <button class="btn btn-default" ui-sref="update">Update Profile</button>
+        <button class="btn btn-default">Add Jobs</button>
     </div>
-    <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 2">
-            <div class="btn-lg"></div>
-            <img src="http://via.placeholder.com/200x200" alt="profile picture" class="img-thumbnail img-responsive">
-            <h4>General Information</h4>
-            <p>Business Name: {{ $ctrl.userDetails.data.business_name }} {{ $ctrl.userDetails.data.last_name }}</p>
-            <p>Description: {{ $ctrl.userDetails.data.description }}</p>
-            <h4>Job Postings</h4>
-            <ul class="list-group">
-                <li class="list-group-item col-xs-12" ng-repeat="job in $ctrl.userDetails.requirements">
-                    <h4 class="col-xs-12">
-                        {{ job.job_title }} in {{ job.state }}, {{ job.city }}
-                    </h4>
-                    <p class="col-xs-12">
-                        {{ job.address }}
-                    </p>
-                    <p class="col-xs-12">
-                        ADD FIELD OF STUDY/JOB FIELD
-                    </p>
-                    <span class="col-xs-12">
-                            {{ job.description | limitTo:100 }}{{ job.description.length > 50 ? '...' : '' }}
-                    </span>
-                    <button class="btn btn-danger">Delete Job</button>    
-                </li>
-    
-                <li class="list-group-item" ng-show="!$ctrl.userDetails.requirements">
-                    No skills listed yet. Update your profile to add skills
-                </li>
-            </ul>
-            <button class="btn btn-default">Update Profile</button>
-            <button class="btn btn-default">Add Jobs</button>
-        </div>
 </div>
