--- a/src/app/update/update.html
+++ b/src/app/update/update.html
@@ -1,6 +1,5 @@
 <div class="col-xs-12 well">
     <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 1">
-        <div class="btn-lg"></div>
         <h4>General Information</h4>
         <p class="form-group">
             <label>First Name</label>
@@ -15,7 +14,7 @@
         <div>
             <div uib-datepicker ng-model="$ctrl.userDetails.data.date_of_birth" class="well well-sm" datepicker-options="options"></div>
         </div>
-        <button ng-click="$ctrl.saveProfile()" class="btn btn-default">Save Profile</button>        
+        <button ng-click="$ctrl.saveProfile()" class="btn btn-default">Save Profile</button>
         <h4>Skills and Experience</h4>
         <div class="well">
             <div class="col-xs-12">
@@ -24,9 +23,14 @@
                         <span class="col-xs-4">
                             {{ skill.skill }}
                         </span>
-                        <span class="col-xs-5 col-xs-offset-3 text-right">
+                        <span class="col-xs-4 col-xs-offset-3 text-right">
                             {{ skill.years_exp > 0 ? skill.years_exp + ' year/s of experience' : 'Less than 1 year experience' }}
                         </span>
+                        <div class="col-xs-1">
+                            <button class="btn btn-danger" ng-click="$ctrl.deleteSkillApplicant(skill.id)">
+                                X
+                            </button>
+                        </div>
                     </li>
                     <li class="list-group-item" ng-hide="$ctrl.userDetails.requirements.length > 0">
                         No skills added yet
@@ -59,33 +63,110 @@
     </div>
     <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 2">
         <div class="btn-lg"></div>
-        <img src="http://via.placeholder.com/200x200" alt="profile picture" class="img-thumbnail img-responsive">
         <h4>General Information</h4>
-        <p>Business Name: {{ $ctrl.userDetails.data.business_name }} {{ $ctrl.userDetails.data.last_name }}</p>
-        <p>Description: {{ $ctrl.userDetails.data.description }}</p>
-        <h4>Job Postings</h4>
-        <ul class="list-group">
-            <li class="list-group-item col-xs-12" ng-repeat="job in $ctrl.userDetails.requirements">
-                <h4 class="col-xs-12">
-                    {{ job.job_title }} in {{ job.state }}, {{ job.city }}
-                </h4>
-                <p class="col-xs-12">
-                    {{ job.address }}
-                </p>
-                <p class="col-xs-12">
-                    ADD FIELD OF STUDY/JOB FIELD
-                </p>
-                <span class="col-xs-12">
-                    {{ job.description | limitTo:100 }}{{ job.description.length > 50 ? '...' : '' }}
-                </span>
-                <button class="btn btn-danger">Delete Job</button>
-            </li>
-
-            <li class="list-group-item" ng-show="!$ctrl.userDetails.requirements">
-                No skills listed yet. Update your profile to add skills
-            </li>
-        </ul>
-        <button class="btn btn-default">Update Profile</button>
-        <button class="btn btn-default">Add Jobs</button>
+        <div class="form-group">
+            <label>Business Name</label>
+            <input type="text" class="form-control" ng-model="$ctrl.userDetails.data.business_name" />
+        </div>
+        <div class="form-group">
+            <label>Description</label>
+            <textarea class="form-control" ng-model="$ctrl.userDetails.data.description"></textarea>
+        </div>
+        <div>
+            <label>
+                Map Location
+            </label>
+            <p>
+                Current Map Location: {{ marker.coords.latitude }}, {{ marker.coords.longitude }}
+            </p>
+            <ui-gmap-google-map ng-if="$ctrl.userDetails.type === 2" center="map.center" zoom="map.zoom" draggable="true" options="options">
+                <ui-gmap-search-box template="searchbox.template" events="searchbox.events"></ui-gmap-search-box>
+                <ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id"></ui-gmap-marker>
+            </ui-gmap-google-map>
+        </div>
+        <button class="btn btn-default" ng-click="$ctrl.updateBusinessDetails()">Update Profile</button>
     </div>
 </div>
+<div class="col-xs-12 well" ng-if="$ctrl.userDetails.type === 2">
+    <h4>Job Postings</h4>
+    <ul class="list-group">
+        <li class="list-group-item" ng-hide="$ctrl.userDetails.requirements.length > 0">
+            No jobs posted.
+        </li>
+        <li class="list-group-item col-xs-12" ng-repeat="job in $ctrl.userDetails.requirements">
+            <span class="col-xs-10">
+
+                <h4 class="col-xs-12">
+                    {{ job.job_title }}
+                </h4>
+                <span class="col-xs-12">
+                    {{ job.description | limitTo:400 }}{{ job.description.length > 400 ? '...' : '' }}
+                </span>
+            </span>
+            <span class="col-xs-2">
+                <button class="btn btn-danger" ng-click="$ctrl.deleteJob(job.id)">Delete Job</button>
+            </span>
+        </li>
+
+        <li class="list-group-item" ng-show="!$ctrl.userDetails.requirements">
+            No skills listed yet. Update your profile to add skills
+        </li>
+    </ul>
+    <div class="well" style="margin-top: 20px;">
+        <h4>New Job</h4>
+        <div class="form-group">
+            <label>Job Title</label>
+            <input type="text" class="form-control" ng-model="$ctrl.newJob.jobTitle" />
+        </div>
+        <div class="form-group">
+            <label>Job Description</label>
+            <textarea class="form-control" ng-model="$ctrl.newJob.description"></textarea>
+        </div>
+        <label>Skills Required</label>
+        <ul class="list-group">
+            <li class="list-group-item" ng-hide="$ctrl.newJob.requirements.length > 0">
+                No required skills yet
+            </li>
+            <li class="list-group-item col-xs-12" ng-repeat="skill in $ctrl.newJob.requirements">
+                <span class="col-xs-4">
+                    {{ skill.skill }}
+                </span>
+                <span class="col-xs-4 col-xs-offset-3 text-right">
+                    {{ skill.years_exp > 0 ? skill.years_exp + ' year/s of experience' : 'Less than 1 year experience' }}
+                </span>
+                <div class="col-xs-1">
+                    <button class="btn btn-danger" ng-click="$ctrl.deleteSkillApplicant(skill.id)">
+                        X
+                    </button>
+                </div>
+            </li>
+            <li class="list-group-item col-xs-12">
+                <div>
+                    <div class="col-xs-9">
+                        <p class="form-group">
+                            <label>Skill Name</label>
+                            <div>
+                                <input type="text" class="form-control" ng-model="$ctrl.newSkill.skill" />
+                            </div>
+                        </p>
+                    </div>
+                    <div class="col-xs-3">
+                        <p class="form-group">
+                            <label>Years Exp</label>
+                            <div>
+                                <input type="number" class="form-control" ng-model="$ctrl.newSkill.years_exp">
+                            </div>
+                        </p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <button class="btn btn-default" ng-click="$ctrl.addSkillToJob($ctrl.newSkill)">Add Skill to required skill</button>
+        <button class="btn btn-default" ng-click="$ctrl.saveJob()">Add Jobs</button>
+    </div>
+</div>
+
+
+<script id="searchbox.tpl.html" type="text/ng-template">
+    <input type="text" placeholder="Search">
+</script>
