--- a/src/app/user/user.html
+++ b/src/app/user/user.html
@@ -1,10 +1,15 @@
 <div class="col-xs-12 well">
     <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 1">
         <div class="btn-lg"></div>
-        <img src="http://via.placeholder.com/200x200" alt="profile picture" class="img-thumbnail img-responsive">
         <h4>General Information</h4>
-        <p>Name: {{ $ctrl.userDetails.data.first_name }} {{ $ctrl.userDetails.data.last_name }}</p>
-        <p>Age: {{ $ctrl.calculateAge($ctrl.userDetails.data.date_of_birth) }}</p>
+        <label>
+            Name
+        </label>
+        <p>{{ $ctrl.userDetails.data.first_name }} {{ $ctrl.userDetails.data.last_name }}</p>
+        <label>
+            Age
+        </label>
+        <p>{{ $ctrl.calculateAge($ctrl.userDetails.data.date_of_birth) }}</p>
         <p>Highest Educational Attainment: (To-do [bachelor,master,phd,elem,hs], [course name] )</p>
         <p>Employment history: todo optional</p>
         <h4>Skills and Experience</h4>
@@ -26,33 +31,49 @@
         <button class="btn btn-default">Message User</button>
     </div>
     <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 2">
-            <div class="btn-lg"></div>
-            <img src="http://via.placeholder.com/200x200" alt="profile picture" class="img-thumbnail img-responsive">
-            <h4>General Information</h4>
-            <p>Business Name: {{ $ctrl.userDetails.data.business_name }} {{ $ctrl.userDetails.data.last_name }}</p>
-            <p>Description: {{ $ctrl.userDetails.data.description }}</p>
-            <h4>Job Postings</h4>
-            <ul class="list-group">
-                <li class="list-group-item col-xs-12" ng-repeat="job in $ctrl.userDetails.requirements">
-                    <h4 class="col-xs-12">
-                        {{ job.job_title }} in {{ job.state }}, {{ job.city }}
-                    </h4>
-                    <p class="col-xs-12">
-                        {{ job.address }}
-                    </p>
-                    <p class="col-xs-12">
-                        ADD FIELD OF STUDY/JOB FIELD
-                    </p>
-                    <span class="col-xs-12">
-                            {{ job.description | limitTo:100 }}{{ job.description.length > 50 ? '...' : '' }}
-                    </span>
-                    <button class="btn btn-warn">View Job</button>    
-                </li>
-    
-                <li class="list-group-item" ng-show="!$ctrl.userDetails.requirements">
-                    No skills listed.
-                </li>
-            </ul>
-            <button class="btn btn-warn">Message User</button>
+        <div class="btn-lg"></div>
+        <h4>General Information</h4>
+        <label>
+            Business Name
+        </label>
+        <p>{{ $ctrl.userDetails.data.business_name }} {{ $ctrl.userDetails.data.last_name }}</p>
+        <label>
+            Description
+        </label>
+        <p>{{ $ctrl.userDetails.data.description }}</p>
+        <div>
+            <label>
+                Map Location
+            </label>
+            <p>
+                {{ marker.coords.latitude }}, {{ marker.coords.longitude }}
+            </p>
+            <ui-gmap-google-map ng-if="$ctrl.userDetails.type === 2" center="map.center" zoom="map.zoom" draggable="true" options="options">
+                <ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id"></ui-gmap-marker>
+            </ui-gmap-google-map>
         </div>
+        <h4>Job Postings</h4>
+        <ul class="list-group">
+            <li class="list-group-item col-xs-12" ng-repeat="job in $ctrl.userDetails.requirements">
+                <h4 class="col-xs-12">
+                    {{ job.job_title }}
+                </h4>
+                <p class="col-xs-12">
+                    {{ job.address }}
+                </p>
+                <p class="col-xs-12">
+                    ADD FIELD OF STUDY/JOB FIELD
+                </p>
+                <span class="col-xs-12">
+                    {{ job.description | limitTo:100 }}{{ job.description.length > 50 ? '...' : '' }}
+                </span>
+                <button class="btn btn-warn" ui-sref="job({jobId: job.id})">View Job</button>
+            </li>
+
+            <li class="list-group-item" ng-show="!$ctrl.userDetails.requirements">
+                No skills listed.
+            </li>
+        </ul>
+        <button class="btn btn-warn">Message User</button>
+    </div>
 </div>
