--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,11 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 body {
   background-color: lightgrey;
 }
+
+textarea {
+  resize: none;
+}
+
+.angular-google-map-container { 
+  height: 400px; 
+}
