--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,7 +1,43 @@
-<div class="jumbotron">
+<!-- <div class="jumbotron">
     <h1>JobFinder</h1>
-    <p>The easiest place to find a job</p>
+    <p>MantunKapanintunan</p>
     <p>
         <a class="btn btn-primary btn-lg" href="/registration" role="button">Register</a>
     </p>
-</div>
+</div> -->
+
+<div class="jumbotron">
+        <div class="container">
+          <h1><i>Mantun Kapanintunan</i>: A Job Finder App </h1>
+          <p>The Mantun Kapanintunan: Job Finder App has been developed to help an unemployed people locally find their job easily and way faster. Company will also benefit using this app finding their suitable employees for their businesses. </p>
+          <p><a class="btn btn-primary btn-lg" href="/registration" role="button">Register</a>
+        <a class="btn btn-primary btn-lg" href="/login" role="button">Login</a>
+        </p>
+        </div>
+      </div>
+  
+      <div class="container">
+        <!-- Example row of columns -->
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Live Matcher</h2>
+            <p>
+                    This feature is a real-time basis for the both applicants and businesses this features is similar behavior of Omegle. Where by applicants and business meet trough to their common requirements and qualifications and had a live messaging. This had an initial interview on the applicant and further they had a promising conversation on how they deal the schedule of the interview and etc.
+            </p>
+           
+          </div>
+          <div class="col-md-4">
+            <h2>Finder</h2>
+            <p>
+                    This feature can search for the specific companies that depending on the user qualification and also the companies can search prospect employees with their corresponding requirements. The search bar is able to filter. In this filter the user can easily access and contact the companies that are urgently hiring depending on the companies desired and also the recomended search this search result are the result that base on your skills and work experience.  
+            </p>
+           
+         </div>
+          <div class="col-md-4">
+            <h2>Mapper</h2>
+            <p>
+                    The Mapper function showed an area of a certain location of the business and applicants. The mapper automatically navigate to where the business is currently located. The Mapper also implemented whiles you creating a Business Profile and Job Requirements.
+            </p>
+            
+          </div>
+        </div>
