--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,6 +1,9 @@
 <div class="col-xs-12">
-    <div class="col-xs-12 col-md-6 jumbotron">
-        <h1>Log into JobFinder</h1>
+        <h3>Welcome to <i>MantunKapanintunan</i>: A Job Finder App</h3>
+        <hr>
+    <div class="col-lg-12 col-md-6 jumbotron">
+        
+        <h1>Login your account</h1>
         <form>
             <div class="form-group">
                 <label>Email address</label>
