--- a/src/app/registration/registration.html
+++ b/src/app/registration/registration.html
@@ -1,8 +1,8 @@
-<div class="col-xs-12 col-md-6">
+<div class="col-lg-12 col-md-6">
     <uib-tabset active="active">
         <uib-tab index="0">
             <uib-tab-heading>
-                Job Finder
+                <h3>Applicant</h3>
             </uib-tab-heading>
             <div class="well">
                 <h1>Looking to get hired?</h1>
@@ -15,6 +15,17 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" placeholder="Password" ng-model="$ctrl.applicantPassword">
                     </div>
+
+                    <div class="form-group">
+                        <input type="password" class="form-control" data-match="#exampleInputPassword1" data-match-error="Whoops, these don't match"
+                            placeholder="Confirm" required>
+                        <div class="help-block with-errors"></div>
+                    </div>
+
+
+
+
+
                     <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.applicantEmail, $ctrl.applicantPassword, 1)">Create Account</button>
                 </form>
             </div>
@@ -22,7 +33,7 @@
         </uib-tab>
         <uib-tab index="1">
             <uib-tab-heading>
-                Business
+                <h3>Business</h3>
             </uib-tab-heading>
 
             <div class="well">
@@ -34,8 +45,19 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" placeholder="Password" ng-model="$ctrl.businessPassword">
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="$ctrl.businessPassword">
                     </div>
+
+                    <div class="form-group">
+                        <input type="password" class="form-control" data-match="#exampleInputPassword1" data-match-error="Whoops, these don't match"
+                            placeholder="Confirm" required>
+                        <div class="help-block with-errors"></div>
+                    </div>
+
+
+
+
+
                     <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.businessEmail, $ctrl.businessPassword, 2)">Create Account</button>
                 </form>
             </div>
