--- a/src/app/messaging/messaging.html
+++ b/src/app/messaging/messaging.html
@@ -25,8 +25,9 @@
                 <textarea class="form-control col-xs-12" rows="5" ng-model="$ctrl.message" placeholder="Message..."></textarea>
             </div>
             <div class="col-md-2 col-xs-12">
-                <button class="btn btn-lg btn-primary col-xs-6 col-md-12" ng-click="$ctrl.sendMessage()">Send</button>
-                <button class="btn btn-lg btn-danger col-xs-6 col-md-12" ng-click="$ctrl.clearMessage()">Clear</button>
+                <button class="btn btn-lg btn-primary col-xs-4 col-md-12" ng-click="$ctrl.sendMessage()">Send</button>
+                <button class="btn btn-lg btn-primary col-xs-4 col-md-12" ng-click="$ctrl.refreshMessages()">Refresh</button>
+                <button class="btn btn-lg btn-danger col-xs-4 col-md-12" ng-click="$ctrl.clearMessage()">Clear</button>
             </div>
         </div>
     </div>
