--- a/src/app/registration/registration.html
+++ b/src/app/registration/registration.html
@@ -17,16 +17,10 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control" data-match="#exampleInputPassword1" data-match-error="Whoops, these don't match"
-                            placeholder="Confirm" required>
-                        <div class="help-block with-errors"></div>
+                        <input type="password" class="form-control" ng-model="$ctrl.matchApplicantPassword" placeholder="Confirm Password">
+                        <div class="text-danger" ng-show="$ctrl.matchApplicantPassword !== $ctrl.applicantPassword && $ctrl.applicantPassword.length > 0 && $ctrl.matchApplicantPassword.length > 0">Whoops, these don't match</div>
                     </div>
-
-
-
-
-
-                    <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.applicantEmail, $ctrl.applicantPassword, 1)">Create Account</button>
+                    <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.applicantEmail, $ctrl.applicantPassword, 1)" ng-disabled="$ctrl.matchApplicantPassword !== $ctrl.applicantPassword && $ctrl.applicantPassword.length > 0 && $ctrl.matchApplicantPassword.length > 0">Create Account</button>
                 </form>
             </div>
 
@@ -49,18 +43,13 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control" data-match="#exampleInputPassword1" data-match-error="Whoops, these don't match"
-                            placeholder="Confirm" required>
-                        <div class="help-block with-errors"></div>
-                    </div>
-
-
-
-
-
-                    <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.businessEmail, $ctrl.businessPassword, 2)">Create Account</button>
-                </form>
+                        <input type="password" class="form-control" ng-model="$ctrl.matchBusinessPassword" placeholder="Confirm Password" required>
+                        <div class="text-danger" ng-show="$ctrl.matchBusinessPassword !== $ctrl.businessPassword && $ctrl.businessPassword.length > 0 && $ctrl.matchBusinessPassword.length > 0">Whoops, these don't match</div>
             </div>
-        </uib-tab>
-    </uib-tabset>
+            <button type="button" ng-disabled="$ctrl.matchBusinessPassword !== $ctrl.businessPassword && $ctrl.businessPassword.length > 0 && $ctrl.matchBusinessPassword.length > 0"
+                class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.businessEmail, $ctrl.businessPassword, 2)">Create Account</button>
+            </form>
+</div>
+</uib-tab>
+</uib-tabset>
 </div>
