--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -7,7 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">JobFinder</a> <div class="navbar-brand" ng-if="$ctrl.userDetails.type === 1" > Hi {{ $ctrl.userDetails.data.first_name }}</div> 
+      <a class="navbar-brand" href="/">JobFinder</a>
+      <div class="navbar-brand" ng-if="$ctrl.userDetails.type === 1"> Hi {{ $ctrl.userDetails.data.first_name }}</div>
+      <div class="navbar-brand" ng-if="$ctrl.userDetails.type === 2"> Hi {{ $ctrl.userDetails.data.business_name }}</div>
     </div>
     <div class="collapse navbar-collapse" uib-collapse="!isNavCollapsed">
       <div>
@@ -21,15 +23,15 @@
         </ul>
         <ul class="nav navbar-nav navbar-right" ng-show="$ctrl.isLoggedIn">
           <form class="navbar-form navbar-left">
-            
+
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search" ng-model="$ctrl.searchTerm">
             </div>
-            <button type="submit" class="btn btn-default" ui-sref="search({search: $ctrl.searchTerm})">Submit</button>
+            <button type="submit" class="btn btn-default" ng-disabled="!$ctrl.searchTerm" ui-sref="search({search: $ctrl.searchTerm})">Submit</button>
             <button ng-show="$ctrl.userDetails.type === 1" type="submit" class="btn btn-default" ui-sref="recommended">Recommended Jobs</button>
             <button class="btn btn-info" ng-click="$ctrl.logOut()">Log Out</a>
           </form>
-        
+
         </ul>
       </div>
       <div class="col-xs-12">
@@ -40,7 +42,7 @@
           <li>
             <a href="/matching">Live Match</a>
           </li>
-          
+
         </ul>
       </div>
     </div>
