--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -1,37 +1,39 @@
 <div class="col-xs-12">
+
     <div class="row">
         <div class="col-xs-12 col-md-12">
             <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">
                     <span class="glyphicon glyphicon-search">
-                    </span> 
+                    </span>
                 </span>
                 <input type="text" ng-model="$ctrl.searchFilter" class="form-control" placeholder="Search">
             </div>
         </div>
         <div class="col-xs-12 col-md-12">
-            <div ng-repeat="job in filtered = ($ctrl.searchResults | filter: $ctrl.searchFilter)">
+            <ul uib-pagination total-items="filtered.length" ng-model="$ctrl.currentPage"></ul>
+            <div ng-repeat="job in filtered = ($ctrl.searchResults | filter: $ctrl.searchFilter) | limitTo: $ctrl.maxResults : $ctrl.maxResults * ($ctrl.currentPage - 1)">
                 <div class="thumbnail">
-                    <img src="http://via.placeholder.com/400x200" alt="business image">
                     <div class="caption">
                         <h2>{{ job.job_title }}</h2>
                         <h3>{{ job.business_name }}</h3>
-                        <h4>{{ job.address }}, {{ job.state }}, {{ job.city }}</h4>
                         <p>{{ job.description | limitTo:400 }}{{ job.description.length > 400 ? '...' : '' }} </p>
                         <p>
                             <a href="#" class="btn btn-warning" role="button" ui-sref="job({jobId: job.id})">View Job</a>
-                            <a href="#" class="btn btn-warning" role="button" ui-sref="user({userId: job.business_id})">View Job Owner</a>
+                            <a href="#" class="btn btn-warning" role="button" ui-sref="user({userId: job.business_id})">View Business</a>
                         </p>
                     </div>
                 </div>
             </div>
+            <ul uib-pagination total-items="filtered.length" ng-model="$ctrl.currentPage"></ul>
             <div ng-show="filtered.length === 0">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h1>No Results Found</h1>
-                        </div>
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h1>No Results Found</h1>
                     </div>
                 </div>
+            </div>
         </div>
     </div>
+
 </div>
