--- a/src/app/update/update.html
+++ b/src/app/update/update.html
@@ -20,13 +20,13 @@
             <div class="col-xs-12">
                 <ul class="list-group">
                     <li class="list-group-item col-xs-12" ng-repeat="skill in $ctrl.userDetails.requirements">
-                        <span class="col-xs-4">
+                        <span class="col-md-4 col-xs-12">
                             {{ skill.skill }}
                         </span>
-                        <span class="col-xs-4 col-xs-offset-3 text-right">
+                        <span class="col-md-4 col-md-offset-3 col-xs-12">
                             {{ skill.years_exp > 0 ? skill.years_exp + ' year/s of experience' : 'Less than 1 year experience' }}
                         </span>
-                        <div class="col-xs-1">
+                        <div class="col-xs-12 col-md-1">
                             <button class="btn btn-danger" ng-click="$ctrl.deleteSkillApplicant(skill.id)">
                                 X
                             </button>
@@ -39,7 +39,7 @@
 
             </div>
             <div class="col-xs-12" style="margin-top: 20px;">
-                <div class="col-xs-9">
+                <div class="col-sm-9 col-xs-12">
                     <p class="form-group">
                         <label>Skill Name</label>
                         <div>
@@ -49,7 +49,7 @@
                         </div>
                     </p>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-sm-3 col-xs-12">
                     <p class="form-group">
                         <label>Years Exp</label>
                         <div>
@@ -94,7 +94,7 @@
             No jobs posted.
         </li>
         <li class="list-group-item col-xs-12" ng-repeat="job in $ctrl.userDetails.requirements">
-            <span class="col-xs-10">
+            <span class="col-xs-12 col-md-10">
 
                 <h4 class="col-xs-12">
                     {{ job.job_title }}
@@ -103,7 +103,7 @@
                     {{ job.description | limitTo:400 }}{{ job.description.length > 400 ? '...' : '' }}
                 </span>
             </span>
-            <span class="col-xs-2">
+            <span class="col-xs-12 col-md-2">
                 <button class="btn btn-danger" ng-click="$ctrl.deleteJob(job.id)">Delete Job</button>
             </span>
         </li>
@@ -131,7 +131,7 @@
                 <span class="col-xs-4">
                     {{ skill.skill }}
                 </span>
-                <span class="col-xs-4 col-xs-offset-3 text-right">
+                <span class="col-xs-4 col-xs-offset-3">
                     {{ skill.years_exp > 0 ? skill.years_exp + ' year/s of experience' : 'Less than 1 year experience' }}
                 </span>
                 <div class="col-xs-1">
@@ -142,7 +142,7 @@
             </li>
             <li class="list-group-item col-xs-12">
                 <div>
-                    <div class="col-xs-9">
+                    <div class="col-sm-9 col-xs-12">
                         <p class="form-group">
                             <label>Skill Name</label>
                             <div>
@@ -150,7 +150,7 @@
                             </div>
                         </p>
                     </div>
-                    <div class="col-xs-3">
+                    <div class="col-sm-3 col-xs-12">
                         <p class="form-group">
                             <label>Years Exp</label>
                             <div>
