--- a/src/app/matching/matching.html
+++ b/src/app/matching/matching.html
@@ -17,7 +17,7 @@
           <h4>Work Experience:</h4>
           <p>
             <span ng-repeat="experience in applicant.applicant.userInfo.requirements">
-              {{ experience.years_exp > 0 ? experience.years_exp : "Less than 1 year" }} experience in {{ experience.skill }}
+              {{ experience.years_exp > 0 ? experience.years_exp + "years " : "Less than 1 year" }} experience in {{ experience.skill }}
             </span>
           </p>
           Fits in the following jobs
