--- a/src/app/profile/profile.html
+++ b/src/app/profile/profile.html
@@ -47,7 +47,7 @@
                 <span class="col-xs-12">
                     {{ job.description | limitTo:100 }}{{ job.description.length > 50 ? '...' : '' }}
                 </span>
-                <button class="btn btn-danger">Delete Job</button>
+                <!-- <button class="btn btn-danger">Delete Job</button> -->
             </li>
 
             <li class="list-group-item" ng-show="!$ctrl.userDetails.requirements">
