--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,19 +1,25 @@
 <div class="col-xs-12">
-        <h3>Welcome to <i>MantunKapanintunan</i>: A Job Finder App</h3>
-        <hr>
-    <div class="col-lg-12 col-md-6 jumbotron">
-        
-        <h1>Login your account</h1>
-        <form>
-            <div class="form-group">
-                <label>Email address</label>
-                <input type="email" class="form-control" placeholder="Email" ng-model="$ctrl.email">
-            </div>
-            <div class="form-group"></div>
-                <label>Password</label>
-                <input type="password" class="form-control" placeholder="Password" ng-model="$ctrl.password">
-                <button type="button" class="btn btn-default" ng-click="$ctrl.loginUser($ctrl.email, $ctrl.password)">Log In</button>
-            </div>
-        </form>
-    </div>
+  <h3>Welcome to
+    <i>MantunKapanintunan</i>: A Job Finder App</h3>
+  <hr>
+  <div class="col-lg-12 col-md-6 jumbotron">
+
+    <h1>Login your account</h1>
+    <form>
+      <div class="form-group">
+        <label>Email address</label>
+        <input ng-change="$ctrl.onTypeCredentials()" type="email" class="form-control" placeholder="Email" ng-model="$ctrl.email">
+      </div>
+      <div class="form-group"></div>
+      <label>Password</label>
+      <input type="password" ng-change="$ctrl.onTypeCredentials()" class="form-control" placeholder="Password" ng-model="$ctrl.password">
+
+      <div ng-show="$ctrl.invalidLogin" class="text-danger">
+        Invalid username or password
+      </div>
+      <button type="button" class="btn btn-default" ng-click="$ctrl.loginUser($ctrl.email, $ctrl.password)">Log In</button>
+  </div>
+  </form>
 </div>
+</div>
+
